2005-05-18  Per Bothner  <per@bothner.com>

	* Makefile.am (select-java1, select-java2, select-java4, select-java4x,
	select-java5): Define new PreProcess key use:java.lang.CharSequence.
	* kawa/lang/Quote.java: Use use:java.util.IdentityHashMap, instead of
	JAVA2 - which was wrong since IdentityHashMap is new in JDK 1.4.
	* kawa/lang/SyntaxTemplate.java: Likewise.
	* kawa/standard/syntax.java: Likewise.

2005-05-18  Per Bothner  <per@bothner.com>

	* kawa/TelnetRepl.java (serve): Get current Environment directly.
	* kawa/lang/AutoloadProcedure.java (load): Use new getLangEnvironment.

2005-05-17  Per Bothner  <per@bothner.com>

	* kawa/standard/fluid_let.java (rewrite): Look for lexical binding.

2005-05-13  Per Bothner  <per@bothner.com>

	* kawa/lang/Quote.java (expand_pair): Rewrite to avoid deep recursion
	(and possible StackOverflow) on long lists.

2005-05-10  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite): Don't follow FieldLocation
	if not inlineOk as that may fail compiling a lambda context.

2005-05-06  Per Bothner  <per@bothner.com>

	* kawa/GuiConsole.java: Some updates for changed environment handling.
	* kawa/Shell.java (run): Remove one overloaded method.
	* kawa/repl.java (processArgs): Update accordingly.
	* kawa/lang/Eval.java(evalBody): Don't change current Environment.
	* kawa/lang/Translator.java (<init>): Use current Environment for env.
	* kawa/standard/Scheme.java (getNewEnvironment): Remove method.
	(<clinit>): Don't getNewEnvironment.
	(lookupBuiltin): New method, based on code from ScmEnv.
	* kawa/standard/ScmEnv.java: No longer needed - functionality
	merged into Scheme's lookupBuiltin.
	* kawa/standard/Makefile.am: Update accordingly.

	* kawa/MessageArea.java (write): Do setCaretPosition.

2005-04-21  Per Bothner  <per@bothner.com>

	* kawa/standard/require.java: Use new contextDecl/setContextDecl
	accessors instead of accessing context field directly.

2005-04-20  Per Bothner  <per@bothner.com>
